improving description for both languages

--- a/en.index.html
+++ b/en.index.html
@@ -74,7 +74,7 @@
         <div class="col-md-6 col-sm-12">
           <div class="about-wrapper__info">
             <p class="about-wrapper__info-text wow animate__fadeIn">
-              I have a dream! That we transform the world. I wish that we the people all over the world take conscious steps, as a whole, to rearrange society and the way we live on earth so that it works for the benefit and well-being of all people everywhere. It is possible and even inevitable to build a completely new form of society, truly civilized and intelligent, in which money does not exist and everything is free and open.
+              I have a dream! That we transform the world. I wish that we, the people all over the world, take conscious steps, as a whole, to rearrange society and the way we live on earth so that it works for the benefit and well-being of all people everywhere. It is possible and even inevitable to build a completely new form of society, truly civilized and intelligent, in which money does not exist and everything is free and open.
             </p>
           </div>
         </div>
@@ -82,7 +82,7 @@
         <div class="col-md-6 col-sm-12">
           <div class="about-wrapper__info">
             <p class="about-wrapper__info-text wow animate__fadeIn">
-              I support the <kbd>Resource Based Economy</kbd> proposed by <kbd>The Venus Project</kbd> founded by the extraordinary mind and vast life experience of Jacque Fresco. Researching the lifelong work of <kbd> Jacque Fresco</kbd> I was inspired, and so, out of a desire to help make the world a better place, I began to learn to code by creating websites to spread awareness about a new way of thinking and a world of free access.
+              I support a <kbd>Resource Based Economy</kbd> proposed by <kbd>The Venus Project</kbd> founded by the extraordinary mind and vast life experience of Jacque Fresco. Researching the lifelong work of <kbd> Jacque Fresco</kbd> I was inspired, and so, out of a desire to help make the world a better place, I began to learn to code by creating websites to spread awareness about a new way of thinking and a world of free access.
             </p>
           </div>
         </div>
