--- a/en.index.html
+++ b/en.index.html
@@ -271,7 +271,7 @@
           <p class="contact-wrapper__text">
             Follow me
           </p>
-          <a target="_blank" class="cta-btn cta-btn--resume" href="mailto:contact.omulmodern@gmail.com">Subscribe</a>
+          <a target="_blank" class="cta-btn cta-btn--resume" href="https://mailchi.mp/a2ac2fbfd601/omul-modern">Subscribe</a>
         </div>
       </div>
     </div>
