--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
           <p class="contact-wrapper__text">
             Abonează-te
           </p>
-          <a target="_blank" class="cta-btn cta-btn--resume" href="mailto:contact.omulmodern@gmail.com">Subscribe</a>
+          <a target="_blank" class="cta-btn cta-btn--resume" href="https://mailchi.mp/a2ac2fbfd601/omul-modern">Subscribe</a>
         </div>
       </div>
     </div>
