empying the contact banner

--- a/en.index.html
+++ b/en.index.html
@@ -155,7 +155,7 @@
               </h3>
               <div>
                 <p class="mb-4">
-                  Omul Modern este o platformă educatională, având scopul de a educa și orienta gândirea omului către valori mai avansate și mai umane pentru a ne îndrepta către o civilizație cu adevarat inteligentă.
+                  (The Modern Human) - Omul Modern will be an educational platform, an online university, aimed at educating and orienting human thinking towards a more advanced and humane value system in order to move towards a truly intelligent civilization.
                 </p>
               </div>
               <a target="_blank" class="cta-btn projects-btn" href="http://omulmodern.ro/">
@@ -247,10 +247,6 @@
   <!--Contact-Banner Section -->
   <section id="contact-banner" class="banner">
     <div class="container">
-      <a href="#top" class="back-to-top">
-        <i class="fa fa-angle-up fa-2x" aria-hidden="true"></i>
-      </a>
-
     </div>
   </section>
 
