--- a/index.html
+++ b/index.html
@@ -172,8 +172,7 @@
               </h3>
               <div>
                 <p class="mb-4">
-                  Omul Modern este o platformă educatională, având scopul de a educa și orienta gândirea omului către
-                  valori mai avansate și mai umane pentru a ne îndrepta către o civilizație cu adevarat inteligentă.
+                  Omul Modern va fi o platformă educatională, o universitate online, având scopul de a educa și orienta gândirea omului către valori mai avansate și mai umane pentru a ne îndrepta către o civilizație cu adevarat inteligentă.
                 </p>
               </div>
               <a target="_blank" class="cta-btn projects-btn" href="http://omulmodern.ro/">
@@ -265,9 +264,7 @@
   <!-- Contact-Banner Section -->
   <section id="contact-banner" class="banner">
     <div class="container">
-      <a href="#top" class="back-to-top">
-        <i class="fa fa-angle-up fa-2x" aria-hidden="true"></i>
-      </a>
+
     </div>
   </section>
 
