its pretty much done

--- a/en.index.html
+++ b/en.index.html
@@ -155,13 +155,13 @@
               </h3>
               <div>
                 <p class="mb-4">
-                  (The Modern Human) - Omul Modern will be an educational platform, an online university, aimed at educating and orienting human thinking towards a more advanced and humane value system in order to move towards a truly intelligent civilization.
+                  (The Modern Human) - Omul Modern will be an educational platform, aimed at educating and orienting human thinking towards a more advanced and humane value system in order to move towards a truly intelligent civilization.
                 </p>
               </div>
               <a target="_blank" class="cta-btn projects-btn" href="http://omulmodern.ro/">
                 See Live
               </a>
-              <a target="_blank" class="cta-btn text-color-main" href="#!">
+              <a target="_blank" class="cta-btn text-color-main hidden-btn" href="#!">
                 Source Code
               </a>
             </div>
@@ -183,17 +183,13 @@
               <h3 class="project-wrapper__text-title">CV / Resume Template </h3>
               <div>
                 <p class="mb-4">
-                  Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                  Excepturi neque, ipsa animi maiores repellendus distinctio
-                  aperiam earum dolor voluptatum consequatur blanditiis
-                  inventore debitis fuga numquam voluptate ex architecto
-                  itaque molestiae.
+                  Sa scriu sau sa nu scriu ceva aici. Daca da, ce anume?
                 </p>
               </div>
               <a target="_blank" class="cta-btn projects-btn" href="https://www.olteanuclaudiu.ro/">
                 See Live
               </a>
-              <a target="_blank" class="cta-btn text-color-main" href="#!">
+              <a target="_blank" class="cta-btn text-color-main hidden-btn" href="#!">
                 Source Code
               </a>
             </div>
@@ -216,17 +212,13 @@
               <h3 class="project-wrapper__text-title">I build awesome websites</h3>
               <div>
                 <p class="mb-4">
-                  Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                  Excepturi neque, ipsa animi maiores repellendus distinctio
-                  aperiam earum dolor voluptatum consequatur blanditiis
-                  inventore debitis fuga numquam voluptate ex architecto
-                  itaque molestiae.
+                   Sa scriu sau sa nu scriu ceva aici. Daca da, ce anume?
                 </p>
               </div>
               <a target="_blank" class="cta-btn projects-btn" href="http://sebastianmoldovan.com/">
                 See Live
               </a>
-              <a target="_blank" class="cta-btn text-color-main" href="#!">
+              <a target="_blank" class="cta-btn text-color-main hidden-btn" href="#!">
                 Source Code
               </a>
             </div>
