--- a/index.html
+++ b/index.html
@@ -172,13 +172,13 @@
               </h3>
               <div>
                 <p class="mb-4">
-                  Omul Modern va fi o platformă educatională, o universitate online, având scopul de a educa și orienta gândirea omului către valori mai avansate și mai umane pentru a ne îndrepta către o civilizație cu adevarat inteligentă.
+                  Omul Modern va fi o platformă educatională, cu scopul de a educa și orienta gândirea omului către valori mai avansate și mai umane pentru a ne îndrepta către o civilizație cu adevarat inteligentă.
                 </p>
               </div>
               <a target="_blank" class="cta-btn projects-btn" href="http://omulmodern.ro/">
                 See Live
               </a>
-              <a target="_blank" class="cta-btn text-color-main" href="#!">
+              <a target="_blank" class="cta-btn text-color-main hidden-btn" href="#!">
                 Source Code
               </a>
             </div>
@@ -200,17 +200,13 @@
               <h3 class="project-wrapper__text-title">CV / Resume Template </h3>
               <div>
                 <p class="mb-4">
-                  Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                  Excepturi neque, ipsa animi maiores repellendus distinctio
-                  aperiam earum dolor voluptatum consequatur blanditiis
-                  inventore debitis fuga numquam voluptate ex architecto
-                  itaque molestiae.
+                   Sa scriu sau sa nu scriu ceva aici. Daca da, ce anume?
                 </p>
               </div>
               <a target="_blank" class="cta-btn projects-btn" href="https://www.olteanuclaudiu.ro/">
                 See Live
               </a>
-              <a target="_blank" class="cta-btn text-color-main" href="#!">
+              <a target="_blank" class="cta-btn text-color-main hidden-btn" href="#!">
                 Source Code
               </a>
             </div>
@@ -233,17 +229,13 @@
               <h3 class="project-wrapper__text-title">Website de prezentare</h3>
               <div>
                 <p class="mb-4">
-                  Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                  Excepturi neque, ipsa animi maiores repellendus distinctio
-                  aperiam earum dolor voluptatum consequatur blanditiis
-                  inventore debitis fuga numquam voluptate ex architecto
-                  itaque molestiae.
+                  Sa scriu sau sa nu scriu ceva aici. Daca da, ce anume?
                 </p>
               </div>
               <a target="_blank" class="cta-btn projects-btn" href="http://sebastianmoldovan.com/">
                 See Live
               </a>
-              <a target="_blank" class="cta-btn text-color-main" href="#!">
+              <a target="_blank" class="cta-btn text-color-main hidden-btn" href="#!">
                 Source Code
               </a>
             </div>
