--- a/en.index.html
+++ b/en.index.html
@@ -272,16 +272,10 @@
         <i class="fa fa-angle-up fa-2x" aria-hidden="true"></i>
       </a>
       <div class="social-links">
-        <a href="#!" target="_blank">
-          <i class="fa fa-twitter fa-inverse"></i>
-        </a>
-        <a href="#!" target="_blank">
-          <i class="fa fa-codepen fa-inverse"></i>
-        </a>
-        <a href="#!" target="_blank">
+        <a href="https://www.linkedin.com/in/marian-tudor-410688125/" target="_blank">
           <i class="fa fa-linkedin fa-inverse"></i>
         </a>
-        <a href="#!" target="_blank">
+        <a href="https://github.com/OmulModern" target="_blank">
           <i class="fa fa-github fa-inverse"></i>
         </a>
       </div>
