linking to omulmodern.com

--- a/en.index.html
+++ b/en.index.html
@@ -158,7 +158,7 @@
                   (The Modern Human) - Omul Modern will be an educational platform, aimed at educating and orienting human thinking towards a more advanced and humane value system in order to move towards a truly intelligent civilization.
                 </p>
               </div>
-              <a target="_blank" class="cta-btn projects-btn" href="http://omulmodern.ro/">
+              <a target="_blank" class="cta-btn projects-btn" href="http://omulmodern.com/">
                 See Live
               </a>
               <a target="_blank" class="cta-btn text-color-main hidden-btn" href="#!">
