--- a/en.index.html
+++ b/en.index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <!-- Change this image of you want another Favicon -->
-  <link rel="shortcut icon" type="image/png" href="img/favicon.png"/>
+  <link rel="shortcut icon" type="image/png" href="img/favic.png"/>
 
   <!-- Put here your site title -->
   <title>Tudor Marian | Web Developer</title>
