making the last changes

--- a/en.index.html
+++ b/en.index.html
@@ -180,10 +180,10 @@
         <div class="row">
           <div class="col-lg-4 col-sm-12">
             <div class="project-wrapper__text wow animate__fadeInLeft">
-              <h3 class="project-wrapper__text-title">CV / Resume Template </h3>
+              <h3 class="project-wrapper__text-title">CV - Resume Template </h3>
               <div>
                 <p class="mb-4">
-                  Sa scriu sau sa nu scriu ceva aici. Daca da, ce anume?
+                  This website was created with HTML&CSS, JQuerry, Boostrap and JavaScript. It is a theme with a clean and modern design, 100% responsive, which means that it is displayed properly on all types of devices. <br> Working on this project I had the opportunity to implement everything I had learned so far.
                 </p>
               </div>
               <a target="_blank" class="cta-btn projects-btn" href="https://www.olteanuclaudiu.ro/">
@@ -209,10 +209,11 @@
         <div class="row">
           <div class="col-lg-4 col-sm-12">
             <div class="project-wrapper__text wow animate__fadeInLeft">
-              <h3 class="project-wrapper__text-title">I build awesome websites</h3>
+              <h3 class="project-wrapper__text-title">Corporate Template - Barber Shop</h3>
               <div>
                 <p class="mb-4">
-                   Sa scriu sau sa nu scriu ceva aici. Daca da, ce anume?
+                  This is my first website ever built after I've decided to learn on my own about programming.
+                   This theme was created using raw HTML&CSS and a little bit of JavaScript. It is a theme with a clean and modern design, 100% Responsive. <br> Working on this project I have learnt the basics of front-end web development.
                 </p>
               </div>
               <a target="_blank" class="cta-btn projects-btn" href="http://sebastianmoldovan.com/">
@@ -231,8 +232,36 @@
             </div>
           </div>
         </div>
-        <!-- /END Project -->
-      </div>
+
+        <!-- Each .row is a project -->
+        <!-- Tudor Marian -->
+        <div class="row">
+          <div class="col-lg-4 col-sm-12">
+            <div class="project-wrapper__text wow animate__fadeInLeft">
+              <h3 class="project-wrapper__text-title">My Own Portfoliu</h3>
+              <div>
+                <p class="mb-4">
+                  This theme was created with <i class="fas fa-heart"></i> using HTML&CSS, Boostrap, JQuerry, Git & GitHub, Command Line and JavaScript libraries. It is a theme inspired by the <a href="https://github.com/cobidev/simplefolio" target="_blank"><mark>Simplefolio</mark></a> project created by <a href="https://github.com/cobidev" target="_blank"><mark>Jacob Martinez</mark></a>.
+                </p>
+              </div>
+              <a class="cta-btn projects-btn" href="index.html">
+                See Live
+              </a>
+              <a target="_blank" class="cta-btn text-color-main hidden-btn" href="#!">
+                Source Code
+              </a>
+            </div>
+          </div>
+          <div class="col-lg-8 col-sm-12">
+            <div class="project-wrapper__image wow animate__fadeIn">
+              <div data-tilt class="thumbnail rounded">
+                <img class="img-fluid" src="img/project4-min.png" />
+              </div>
+            </div>
+          </div>
+        </div>
+        
+      </div><!-- /END Project -->
     </div>
   </section> <!-- /END Projects Section -->
 
