--- a/index.html
+++ b/index.html
@@ -197,10 +197,10 @@
         <div class="row">
           <div class="col-lg-4 col-sm-12">
             <div class="project-wrapper__text wow animate__fadeInLeft">
-              <h3 class="project-wrapper__text-title">CV / Resume Template </h3>
+              <h3 class="project-wrapper__text-title">CV - Rezumat - Portofoliu Website </h3>
               <div>
                 <p class="mb-4">
-                   Sa scriu sau sa nu scriu ceva aici. Daca da, ce anume?
+                   Acest website este creat cu HTML&CSS, JQuerry, Boostrap și JavaScript. Este o temă cu un design curat și modern, 100% responsive, ceea ce înseamnă că este afișată corespunzător pe toate tipurile de dispozitive. <br> Lucrând la acest proiect am avut oportunitatea să pun în aplicare tot ce am învățat până în acel moment.
                 </p>
               </div>
               <a target="_blank" class="cta-btn projects-btn" href="https://www.olteanuclaudiu.ro/">
@@ -226,10 +226,10 @@
         <div class="row">
           <div class="col-lg-4 col-sm-12">
             <div class="project-wrapper__text wow animate__fadeInLeft">
-              <h3 class="project-wrapper__text-title">Website de prezentare</h3>
+              <h3 class="project-wrapper__text-title">Corporate Template - BarberShop</h3>
               <div>
                 <p class="mb-4">
-                  Sa scriu sau sa nu scriu ceva aici. Daca da, ce anume?
+                  Acesta este primul meu site web construit vreodată după ce am decis să învăț singur despre programare. Această temă a fost creată folosind doar HTML&CSS și un pic de JavaScript. Este o temă cu un design curat și modern, 100% Responsive. <br> Lucrând la acest proiect, am învățat elementele de bază ale programării în front-end web development.
                 </p>
               </div>
               <a target="_blank" class="cta-btn projects-btn" href="http://sebastianmoldovan.com/">
@@ -248,8 +248,36 @@
             </div>
           </div>
         </div>
-        <!-- /END Project -->
-      </div>
+
+        <!-- Each .row is a project -->
+        <!-- Tudor Marian -->
+        <div class="row">
+          <div class="col-lg-4 col-sm-12">
+            <div class="project-wrapper__text wow animate__fadeInLeft">
+              <h3 class="project-wrapper__text-title">Propriul Portofoliu</h3>
+              <div>
+                <p class="mb-4">
+                  Această temă a fost creată cu <i class="fas fa-heart"></i> folosind HTML&CSS, Boostrap, JQuerry, Git & GitHub, Command Line și librării JavaScript. Este o temă inspirată de proiectul <a href="https://github.com/cobidev/simplefolio" target="_blank"><mark>Simplefolio</mark></a> creat de <a href="https://github.com/cobidev" target="_blank"><mark>Jacob Martinez</mark></a>.
+                </p>
+              </div>
+              <a class="cta-btn projects-btn" href="index.html">
+                See Live
+              </a>
+              <a target="_blank" class="cta-btn text-color-main hidden-btn" href="#!">
+                Source Code
+              </a>
+            </div>
+          </div>
+          <div class="col-lg-8 col-sm-12">
+            <div class="project-wrapper__image wow animate__fadeIn">
+              <div data-tilt class="thumbnail rounded">
+                <img class="img-fluid" src="img/project4-min.png" />
+              </div>
+            </div>
+          </div>
+        </div>
+
+      </div><!-- /END Project -->
     </div>
   </section> <!-- /END Projects Section -->
 
