--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
   <!-- Put here your site title -->
   <title>Tudor Marian | Web Developer</title>
   <!-- Add some coding keywords below, Ex: (javascript, yourusername, etc) -->
-  <meta name="keywords" content="[username], [name], skill" />
+  <meta name="keywords" content="Tudor Marian, Omul Modern, Omul, Modern, web developer, multidisciplinar, avans in gandire, creez site" />
   <!-- Improve your SEO by adding a small descrption of you -->
-  <meta name="description" content="[Your name here] | Developer">
+  <meta name="description" content="Mă numesc Tudor Marian, sunt multidisciplinar și web-developer, lucrez pentru a mă îmbunătăți pe mine și restul umanității.">
 
   <!-- Required librarys -->
 
