--- a/en.index.html
+++ b/en.index.html
@@ -11,9 +11,9 @@
   <!-- Put here your site title -->
   <title>Tudor Marian | Web Developer</title>
   <!-- Add some coding keywords below, Ex: (javascript, yourusername, etc) -->
-  <meta name="keywords" content="[username], [name], skill" />
+  <meta name="keywords" content="Tudor Marian, Omul Modern, Omul, Modern, web developer, multidisciplinary, advance in human thinnking, I build websites" />
   <!-- Improve your SEO by adding a small descrption of you -->
-  <meta name="description" content="[Your name here] | Developer">
+  <meta name="description" content="My name is Tudor Marian, I am multidisciplinary and web-developer, I work to better myself and the rest of humanity.">
 
   <!-- Required librarys -->
 
