black background for small devices

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
           </div>
           <div class="carousel-item">
             <blockquote>
-              <p>"Nu spun ca voi schimba lumea,<br> dar voi declanșa gândirea care o va face."</p>
+              <p>"Nu spun ca voi schimba lumea,<br class="separator"> dar voi declanșa gândirea care o va face."</p>
               <cite>Tudor Marian</cite>
             </blockquote>
           </div>
