--- a/en.index.html
+++ b/en.index.html
@@ -49,7 +49,7 @@
       </ul>
       <h1 class="hero-title" class="load-hidden">
         My name is <span class="text-color-main">Tudor Marian</span> <br>
-        I am a <span class="typed"></span>
+        I am <span class="typed"></span>
         <br />
       </h1>
       <p class="hero-cta" class="load-hidden">
