--- a/index.html
+++ b/index.html
@@ -56,12 +56,12 @@
       <ul class="ro-flag">
         <li><a href="en.index.html"><img src="./img/uk.png" alt=""><span>En</span></a></li>
       </ul>
-      <h1 class="hero-title" class="load-hidden">
+      <h1 class="hero-title load-hidden">
         Mă numesc <span class="text-color-main">Tudor Marian</span>
         <br />
         Sunt <span class="typed"></span>
       </h1>
-      <p class="hero-cta" class="load-hidden">
+      <p class="hero-cta load-hidden">
         <a class="cta-btn cta-btn--hero main-button js-scroll-to-about wow animate__backInDown" href="#about">Află mai
           multe</a>
       </p>
@@ -77,8 +77,7 @@
       <div class="row about-wrapper">
         <div class="col-md-12 col-sm-12">
           <div class="about-wrapper__image">
-            <img class="img-fluid rounded shadow-lg wow animate__fadeInUp" height="auto" width="150px"
-              src="img/profile-smaller.png" alt="Profile Image" />
+            <img class="img-fluid rounded shadow-lg wow animate__fadeInUp" src="img/profile-smaller.png" alt="Profile Image" />
           </div>
         </div>
         <div class="col-md-6 col-sm-12">
@@ -125,19 +124,19 @@
         <div class="carousel-inner">
           <div class="carousel-item active">
             <blockquote>
-              <p>"Sunt creator de site-uri, lucrez pentru a mă îmbunătăți pe mine și restul umanității."</p>
+              <h4>"Sunt creator de site-uri, lucrez pentru a mă îmbunătăți pe mine și restul umanității."</h4>
               <cite>Tudor Marian</cite>
             </blockquote>
           </div>
           <div class="carousel-item">
             <blockquote>
-              <p>"Nu spun ca voi schimba lumea,<br class="separator"> dar voi declanșa gândirea care o va face."</p>
+              <h4>"Nu spun ca voi schimba lumea,<br class="separator"> dar voi declanșa gândirea care o va face."</h4>
               <cite>Tudor Marian</cite>
             </blockquote>
           </div>
           <div class="carousel-item">
             <blockquote>
-            <p>"Dacă suficient de mulți oameni lucrează la ceea ce propun, cred că putem schimba lumea."</p>
+            <h4>"Dacă suficient de mulți oameni lucrează la ceea ce propun, cred că putem schimba lumea."</h4>
             <cite>Jacque Fresco</cite>
             </blockquote>
           </div>
@@ -186,7 +185,7 @@
           <div class="col-lg-8 col-sm-12">
             <div class="project-wrapper__image wow animate__fadeIn">
               <div data-tilt class="thumbnail rounded">
-                <img class="img-fluid" src="img/projectOmulModern.png" />
+                <img class="img-fluid" src="img/projectOmulModern.png" alt="Omul Modern Image Project"/>
               </div>
             </div>
           </div>
@@ -214,7 +213,7 @@
           <div class="col-lg-8 col-sm-12">
             <div class="project-wrapper__image wow animate__fadeIn">
               <div data-tilt class="thumbnail rounded">
-                <img class="img-fluid" src="img/projectOlteanuClaudiu.png" />
+                <img class="img-fluid" src="img/projectOlteanuClaudiu.png" alt="Olteanu Claudiu Image Project"/>
               </div>
             </div>
           </div>
@@ -243,7 +242,7 @@
           <div class="col-lg-8 col-sm-12">
             <div class="project-wrapper__image wow animate__fadeIn">
               <div data-tilt class="thumbnail rounded">
-                <img class="img-fluid" src="img/projectSebastianMoldovan.png" />
+                <img class="img-fluid" src="img/projectSebastianMoldovan.png" alt="Sebastian Moldovan Image Project"/>
               </div>
             </div>
           </div>
@@ -271,7 +270,7 @@
           <div class="col-lg-8 col-sm-12">
             <div class="project-wrapper__image wow animate__fadeIn">
               <div data-tilt class="thumbnail rounded">
-                <img class="img-fluid" src="img/project4-min.png" />
+                <img class="img-fluid" src="img/project4-min.png" alt="Tudor Marian Image Project"/>
               </div>
             </div>
           </div>
@@ -284,7 +283,7 @@
   <!-- Contact-Banner Section -->
   <section id="contact-banner" class="banner">
     <div class="container">
-
+      <h2 class="banner-hidden-title" style="display: none;">Omul Modern</h2>
     </div>
   </section>
 
@@ -332,12 +331,11 @@
       <p class="footer__text">
         © 2020 - Temă creată de <a href="index.html"><kbd class="creators">Tudor Marian</kbd></a><br>
         Inspirat de <a href="https://github.com/cobidev" target="_blank"><kbd class="creators">Jacobo Martínez</kbd></a>
-        </a>
       </p>
 
       <ul class="lang-nav">
         <li><a href="index.html"><img src="./img/ro.png" alt=""></a></li>
-        <li><a href="en.index.html"><img src="./img/uk.png" alt=""></a></a></li>
+        <li><a href="en.index.html"><img src="./img/uk.png" alt=""></a></li>
       </ul>
 
     </div>
