validate W3C en.indnex.html

--- a/en.index.html
+++ b/en.index.html
@@ -47,12 +47,12 @@
       <ul class="ro-flag">
         <li><a href="index.html"><img src="./img/ro.png" alt=""><span>RO</span></a></li>
       </ul>
-      <h1 class="hero-title" class="load-hidden">
+      <h1 class="hero-title">
         My name is <span class="text-color-main">Tudor Marian</span> <br>
         I am <span class="typed"></span>
         <br />
       </h1>
-      <p class="hero-cta" class="load-hidden">
+      <p class="hero-cta">
         <a class="cta-btn cta-btn--hero main-button js-scroll-to-about wow animate__animated animate__backInDown" href="#about">Find out more</a>
       </p>
     </div>
@@ -67,7 +67,7 @@
       <div class="row about-wrapper">
         <div class="col-md-12 col-sm-12">
           <div class="about-wrapper__image">
-            <img class="img-fluid rounded shadow-lg wow animate__fadeInUp" height="auto" width="150px" src="img/profile-smaller.png"
+            <img class="img-fluid rounded shadow-lg wow animate__fadeInUp" src="img/profile-smaller.png"
               alt="Profile Image" />
           </div>
         </div>
@@ -108,19 +108,19 @@
         <div class="carousel-inner">
           <div class="carousel-item active">
             <blockquote>
-              <p>"I am website creator, I work to better myself and the rest of humanity."</p>
+              <h4>"I am website creator, I work to better myself and the rest of humanity."</h4>
               <cite>Tudor Marian</cite>
             </blockquote>
           </div>
           <div class="carousel-item">
             <blockquote>
-              <p>"I'm not saying I will change the world but I will spark the thinking that will."</p>
+              <h4>"I'm not saying I will change the world but I will spark the thinking that will."</h4>
               <cite>Tudor Marian</cite>
             </blockquote>
           </div>
           <div class="carousel-item">
             <blockquote>
-            <p>"If enough people work at what I talk about, I believe we can change the world."</p>
+            <h4>"If enough people work at what I talk about, I believe we can change the world."</h4>
             <cite>Jacque Fresco</cite>
             </blockquote>
           </div>
@@ -169,7 +169,7 @@
           <div class="col-lg-8 col-sm-12">
             <div class="project-wrapper__image wow animate__fadeIn">
               <div class="thumbnail rounded">
-                <img class="img-fluid" src="img/projectOmulModern.png" />
+                <img class="img-fluid" src="img/projectOmulModern.png" alt="Omul Modern Image Project"/>
               </div>
             </div>
           </div>
@@ -197,7 +197,7 @@
           <div class="col-lg-8 col-sm-12">
             <div class="project-wrapper__image wow animate__fadeIn">
               <div class="thumbnail rounded">
-                <img class="img-fluid" src="img/projectOlteanuClaudiu.png" />
+                <img class="img-fluid" src="img/projectOlteanuClaudiu.png" alt="Olteanu Claudiu Image Project"/>
               </div>
             </div>
           </div>
@@ -227,7 +227,7 @@
           <div class="col-lg-8 col-sm-12">
             <div class="project-wrapper__image wow animate__fadeIn">
               <div class="thumbnail rounded">
-                <img class="img-fluid" src="img/projectSebastianMoldovan.png" />
+                <img class="img-fluid" src="img/projectSebastianMoldovan.png" alt="Sebastian Moldovan Image Project"/>
               </div>
             </div>
           </div>
@@ -238,7 +238,7 @@
         <div class="row">
           <div class="col-lg-4 col-sm-12">
             <div class="project-wrapper__text wow animate__fadeInLeft">
-              <h3 class="project-wrapper__text-title">My Own Portfoliu</h3>
+              <h3 class="project-wrapper__text-title">My Own Portfolio</h3>
               <div>
                 <p class="mb-4">
                   This theme was created with <i class="fas fa-heart"></i> using HTML&CSS, Boostrap, JQuerry, Git & GitHub, Command Line and JavaScript libraries. It is a theme inspired by the <a href="https://github.com/cobidev/simplefolio" target="_blank"><mark>Simplefolio</mark></a> project created by <a href="https://github.com/cobidev" target="_blank"><mark>Jacob Martinez</mark></a>.
@@ -255,7 +255,7 @@
           <div class="col-lg-8 col-sm-12">
             <div class="project-wrapper__image wow animate__fadeIn">
               <div data-tilt class="thumbnail rounded">
-                <img class="img-fluid" src="img/project4-min.png" />
+                <img class="img-fluid" src="img/project4-min.png" alt="Personal Portfolio Image Project"/>
               </div>
             </div>
           </div>
@@ -268,6 +268,7 @@
   <!--Contact-Banner Section -->
   <section id="contact-banner" class="banner">
     <div class="container">
+      <h2 class="banner-hidden-title" style="display: none;">Omul Modern</h2>
     </div>
   </section>
 
@@ -315,12 +316,11 @@
       <p class="footer__text">
         © 2020 - Template built by <a href="index.html"><kbd class="creators">Tudor Marian</kbd></a><br>
         Inspired from <a href="https://github.com/cobidev" target="_blank"><kbd class="creators">Jacobo Martínez</kbd></a>
-        </a>
       </p>
 
       <ul class="lang-nav">
         <li><a href="index.html"><img src="./img/ro.png" alt=""></a></li>
-        <li><a href="en.index.html"><img src="./img/uk.png" alt=""></a></a></li>
+        <li><a href="en.index.html"><img src="./img/uk.png" alt=""></a></li>
       </ul>
     </div>
   </footer> <!-- /END Footer Section -->
