making all images even smaller

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
   <div id="hero" class="jumbotron">
     <div class="container">
       <ul class="ro-flag">
-        <li><a href="en.index.html"><img src="./img/uk.png" alt=""><span>En</span></a></li>
+        <li><a href="en.index.html"><img src="./img/uk-flag.gif" alt=""><span>En</span></a></li>
       </ul>
       <h1 class="hero-title load-hidden">
         Mă numesc <span class="text-color-main">Tudor Marian</span>
@@ -77,7 +77,7 @@
       <div class="row about-wrapper">
         <div class="col-md-12 col-sm-12">
           <div class="about-wrapper__image">
-            <img class="img-fluid rounded shadow-lg wow animate__fadeInUp" src="img/profile-smaller.png" alt="Profile Image" />
+            <img class="img-fluid rounded shadow-lg wow animate__fadeInUp" src="img/profile-img-min.png" alt="Profile Image" />
           </div>
         </div>
         <div class="col-md-6 col-sm-12">
@@ -185,7 +185,7 @@
           <div class="col-lg-8 col-sm-12">
             <div class="project-wrapper__image wow animate__fadeIn">
               <div data-tilt class="thumbnail rounded">
-                <img class="img-fluid" src="img/projectOmulModern.png" alt="Omul Modern Image Project"/>
+                <img class="img-fluid" src="img/omulmodernProject-min.png" alt="Omul Modern Image Project"/>
               </div>
             </div>
           </div>
@@ -213,7 +213,7 @@
           <div class="col-lg-8 col-sm-12">
             <div class="project-wrapper__image wow animate__fadeIn">
               <div data-tilt class="thumbnail rounded">
-                <img class="img-fluid" src="img/projectOlteanuClaudiu.png" alt="Olteanu Claudiu Image Project"/>
+                <img class="img-fluid" src="img/olteanuclaudiuProject-min.png" alt="Olteanu Claudiu Image Project"/>
               </div>
             </div>
           </div>
@@ -242,7 +242,7 @@
           <div class="col-lg-8 col-sm-12">
             <div class="project-wrapper__image wow animate__fadeIn">
               <div data-tilt class="thumbnail rounded">
-                <img class="img-fluid" src="img/projectSebastianMoldovan.png" alt="Sebastian Moldovan Image Project"/>
+                <img class="img-fluid" src="img/sebastianmoldovanProject-min.png" alt="Sebastian Moldovan Image Project"/>
               </div>
             </div>
           </div>
@@ -270,7 +270,7 @@
           <div class="col-lg-8 col-sm-12">
             <div class="project-wrapper__image wow animate__fadeIn">
               <div data-tilt class="thumbnail rounded">
-                <img class="img-fluid" src="img/project4-min.png" alt="Tudor Marian Image Project"/>
+                <img class="img-fluid" src="img/myportfolioProject-min.png" alt="Tudor Marian Image Project"/>
               </div>
             </div>
           </div>
@@ -334,8 +334,8 @@
       </p>
 
       <ul class="lang-nav">
-        <li><a href="index.html"><img src="./img/ro.png" alt=""></a></li>
-        <li><a href="en.index.html"><img src="./img/uk.png" alt=""></a></li>
+        <li><a href="index.html"><img src="./img/ro-flag.gif" alt=""></a></li>
+        <li><a href="en.index.html"><img src="./img/uk-flag.gif" alt=""></a></li>
       </ul>
 
     </div>
