--- a/en.index.html
+++ b/en.index.html
@@ -45,7 +45,7 @@
   <div id="hero" class="jumbotron">
     <div class="container">
       <ul class="ro-flag">
-        <li><a href="index.html"><img src="./img/ro.png" alt=""><span>RO</span></a></li>
+        <li><a href="index.html"><img src="./img/ro-flag.gif" alt=""><span>RO</span></a></li>
       </ul>
       <h1 class="hero-title">
         My name is <span class="text-color-main">Tudor Marian</span> <br>
@@ -67,7 +67,7 @@
       <div class="row about-wrapper">
         <div class="col-md-12 col-sm-12">
           <div class="about-wrapper__image">
-            <img class="img-fluid rounded shadow-lg wow animate__fadeInUp" src="img/profile-smaller.png"
+            <img class="img-fluid rounded shadow-lg wow animate__fadeInUp" src="img/profile-img-min.png"
               alt="Profile Image" />
           </div>
         </div>
@@ -169,7 +169,7 @@
           <div class="col-lg-8 col-sm-12">
             <div class="project-wrapper__image wow animate__fadeIn">
               <div class="thumbnail rounded">
-                <img class="img-fluid" src="img/projectOmulModern.png" alt="Omul Modern Image Project"/>
+                <img class="img-fluid" src="img/omulmodernProject-min.png" alt="Omul Modern Image Project"/>
               </div>
             </div>
           </div>
@@ -197,7 +197,7 @@
           <div class="col-lg-8 col-sm-12">
             <div class="project-wrapper__image wow animate__fadeIn">
               <div class="thumbnail rounded">
-                <img class="img-fluid" src="img/projectOlteanuClaudiu.png" alt="Olteanu Claudiu Image Project"/>
+                <img class="img-fluid" src="img/olteanuclaudiuProject-min.png" alt="Olteanu Claudiu Image Project"/>
               </div>
             </div>
           </div>
@@ -227,7 +227,7 @@
           <div class="col-lg-8 col-sm-12">
             <div class="project-wrapper__image wow animate__fadeIn">
               <div class="thumbnail rounded">
-                <img class="img-fluid" src="img/projectSebastianMoldovan.png" alt="Sebastian Moldovan Image Project"/>
+                <img class="img-fluid" src="img/sebastianmoldovanProject-min.png" alt="Sebastian Moldovan Image Project"/>
               </div>
             </div>
           </div>
@@ -255,7 +255,7 @@
           <div class="col-lg-8 col-sm-12">
             <div class="project-wrapper__image wow animate__fadeIn">
               <div data-tilt class="thumbnail rounded">
-                <img class="img-fluid" src="img/project4-min.png" alt="Personal Portfolio Image Project"/>
+                <img class="img-fluid" src="img/myportfolioProject-min.png" alt="Personal Portfolio Image Project"/>
               </div>
             </div>
           </div>
@@ -319,8 +319,8 @@
       </p>
 
       <ul class="lang-nav">
-        <li><a href="index.html"><img src="./img/ro.png" alt=""></a></li>
-        <li><a href="en.index.html"><img src="./img/uk.png" alt=""></a></li>
+        <li><a href="index.html"><img src="./img/ro-flag.gif" alt=""></a></li>
+        <li><a href="en.index.html"><img src="./img/uk-flag.gif" alt=""></a></li>
       </ul>
     </div>
   </footer> <!-- /END Footer Section -->
