added latest changes

--- a/en.index.html
+++ b/en.index.html
@@ -108,7 +108,7 @@
         <div class="carousel-inner">
           <div class="carousel-item active">
             <blockquote>
-              <h4>"I am website creator, I work to better myself and the rest of humanity."</h4>
+              <h4>"I am multidisciplinary, I work to better myself and the rest of humanity."</h4>
               <cite>Tudor Marian</cite>
             </blockquote>
           </div>
@@ -155,10 +155,10 @@
               </h3>
               <div>
                 <p class="mb-4">
-                  (The Modern Human) - Omul Modern will be an educational platform, aimed at educating and orienting human thinking towards a more advanced and humane value system in order to move towards a truly intelligent civilization.
+                  Omul Modern - (The Modern Human) will be an educational platform, aimed at educating and orienting human thinking towards a more advanced and humane value system in order to move towards a truly intelligent civilization.
                 </p>
               </div>
-              <a target="_blank" class="cta-btn projects-btn" href="http://omulmodern.com/">
+              <a style="display: none;" target="_blank" class="cta-btn projects-btn" href="http://omulmodern.com/">
                 See Live
               </a>
               <a target="_blank" class="cta-btn text-color-main hidden-btn" href="#!">
@@ -216,7 +216,7 @@
                    This theme was created using raw HTML&CSS and a little bit of JavaScript. It is a theme with a clean and modern design, 100% Responsive. <br> Working on this project I have learnt the basics of front-end web development.
                 </p>
               </div>
-              <a target="_blank" class="cta-btn projects-btn" href="http://sebastianmoldovan.com/">
+              <a style="display: none;" target="_blank" class="cta-btn projects-btn" href="http://sebastianmoldovan.com/">
                 See Live
               </a>
               <a target="_blank" class="cta-btn text-color-main hidden-btn" href="#!">
