--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
         <div class="carousel-inner">
           <div class="carousel-item active">
             <blockquote>
-              <h4>"Sunt creator de site-uri, lucrez pentru a mă îmbunătăți pe mine și restul umanității."</h4>
+              <h4>"Sunt multidisciplinar, lucrez pentru a mă îmbunătăți pe mine și restul umanității."</h4>
               <cite>Tudor Marian</cite>
             </blockquote>
           </div>
@@ -174,7 +174,7 @@
                   Omul Modern va fi o platformă educatională, cu scopul de a educa și orienta gândirea omului către valori mai avansate și mai umane pentru a ne îndrepta către o civilizație cu adevarat inteligentă.
                 </p>
               </div>
-              <a target="_blank" class="cta-btn projects-btn" href="http://omulmodern.com/">
+              <a style="display: none;" target="_blank" class="cta-btn projects-btn" href="http://omulmodern.com/">
                 See Live
               </a>
               <a target="_blank" class="cta-btn text-color-main hidden-btn" href="#!">
@@ -231,7 +231,7 @@
                   Acesta este primul meu site web construit vreodată după ce am decis să învăț singur despre programare. Această temă a fost creată folosind doar HTML&CSS și un pic de JavaScript. Este o temă cu un design curat și modern, 100% Responsive. <br> Lucrând la acest proiect, am învățat elementele de bază ale programării în front-end web development.
                 </p>
               </div>
-              <a target="_blank" class="cta-btn projects-btn" href="http://sebastianmoldovan.com/">
+              <a style="display: none;" target="_blank" class="cta-btn projects-btn" href="http://sebastianmoldovan.com/">
                 See Live
               </a>
               <a target="_blank" class="cta-btn text-color-main hidden-btn" href="#!">
