--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                   Omul Modern va fi o platformă educatională, cu scopul de a educa și orienta gândirea omului către valori mai avansate și mai umane pentru a ne îndrepta către o civilizație cu adevarat inteligentă.
                 </p>
               </div>
-              <a target="_blank" class="cta-btn projects-btn" href="http://omulmodern.com/">
+              <a style="display: none;" target="_blank" class="cta-btn projects-btn" href="http://omulmodern.com/">
                 See Live
               </a>
               <a target="_blank" class="cta-btn text-color-main hidden-btn" href="#!">
