--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                   Omul Modern va fi o platformă educatională, cu scopul de a educa și orienta gândirea omului către valori mai avansate și mai umane pentru a ne îndrepta către o civilizație cu adevarat inteligentă.
                 </p>
               </div>
-              <a target="_blank" class="cta-btn projects-btn" href="http://omulmodern.com/">
+              <a target="_blank" class="cta-btn projects-btn" href="https://omulmodern.com/">
                 See Live
               </a>
               <a target="_blank" class="cta-btn text-color-main hidden-btn" href="#!">
@@ -231,7 +231,7 @@
                   Acesta este primul meu site web construit vreodată după ce am decis să învăț singur despre programare. Această temă a fost creată folosind doar HTML&CSS și un pic de JavaScript. Este o temă cu un design curat și modern, 100% Responsive. <br> Lucrând la acest proiect, am învățat elementele de bază ale programării în front-end web development.
                 </p>
               </div>
-              <a style="display: none;" target="_blank" class="cta-btn projects-btn" href="http://sebastianmoldovan.com/">
+              <a style="display: none;" target="_blank" class="cta-btn projects-btn" href="https://sebastianmoldovan.com/">
                 See Live
               </a>
               <a target="_blank" class="cta-btn text-color-main hidden-btn" href="#!">
@@ -259,7 +259,7 @@
                   Această temă a fost creată cu <i class="fas fa-heart"></i> folosind HTML&CSS, Boostrap, JQuerry, Git & GitHub, Command Line și librării JavaScript. Este o temă inspirată de proiectul <a href="https://github.com/cobidev/simplefolio" target="_blank"><mark>Simplefolio</mark></a> creat de <a href="https://github.com/cobidev" target="_blank"><mark>Jacob Martinez</mark></a>.
                 </p>
               </div>
-              <a class="cta-btn projects-btn" href="index.html">
+              <a class="cta-btn projects-btn" href="https://omulmodern.ro/">
                 See Live
               </a>
               <a target="_blank" class="cta-btn text-color-main hidden-btn" href="#!">
@@ -329,7 +329,7 @@
 
       <!-- If you give me some credit, will be huge for me :) -->
       <p class="footer__text">
-        © 2020 - Temă creată de <a href="index.html"><kbd class="creators">Tudor Marian</kbd></a><br>
+        © 2020 - Temă creată de <a href="https://omulmodern.ro/"><kbd class="creators">Tudor Marian</kbd></a><br>
         Inspirat de <a href="https://github.com/cobidev" target="_blank"><kbd class="creators">Jacobo Martínez</kbd></a>
       </p>
 
