perfecting en version latest changes

--- a/en.index.html
+++ b/en.index.html
@@ -158,7 +158,7 @@
                   Omul Modern - (The Modern Human) will be an educational platform, aimed at educating and orienting human thinking towards a more advanced and humane value system in order to move towards a truly intelligent civilization.
                 </p>
               </div>
-              <a target="_blank" class="cta-btn projects-btn" href="http://omulmodern.com/">
+              <a target="_blank" class="cta-btn projects-btn" href="https://omulmodern.com/">
                 See Live
               </a>
               <a target="_blank" class="cta-btn text-color-main hidden-btn" href="#!">
@@ -216,7 +216,7 @@
                    This theme was created using raw HTML&CSS and a little bit of JavaScript. It is a theme with a clean and modern design, 100% Responsive. <br> Working on this project I have learnt the basics of front-end web development.
                 </p>
               </div>
-              <a style="display: none;" target="_blank" class="cta-btn projects-btn" href="http://sebastianmoldovan.com/">
+              <a style="display: none;" target="_blank" class="cta-btn projects-btn" href="https://sebastianmoldovan.com/">
                 See Live
               </a>
               <a target="_blank" class="cta-btn text-color-main hidden-btn" href="#!">
@@ -244,7 +244,7 @@
                   This theme was created with <i class="fas fa-heart"></i> using HTML&CSS, Boostrap, JQuerry, Git & GitHub, Command Line and JavaScript libraries. It is a theme inspired by the <a href="https://github.com/cobidev/simplefolio" target="_blank"><mark>Simplefolio</mark></a> project created by <a href="https://github.com/cobidev" target="_blank"><mark>Jacob Martinez</mark></a>.
                 </p>
               </div>
-              <a class="cta-btn projects-btn" href="index.html">
+              <a class="cta-btn projects-btn" href="https://omulmodern.ro/">
                 See Live
               </a>
               <a target="_blank" class="cta-btn text-color-main hidden-btn" href="#!">
@@ -314,7 +314,7 @@
 
       <!-- If you give me some credit, will be huge for me :) -->
       <p class="footer__text">
-        © 2020 - Template built by <a href="index.html"><kbd class="creators">Tudor Marian</kbd></a><br>
+        © 2020 - Template built by <a href="https://omulmodern.ro/"><kbd class="creators">Tudor Marian</kbd></a><br>
         Inspired from <a href="https://github.com/cobidev" target="_blank"><kbd class="creators">Jacobo Martínez</kbd></a>
       </p>
 
